; ModuleID = '/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_set_protocol_mqtt.c'
source_filename = "/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_set_protocol_mqtt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_connection = type { i32, i32, i32 }

@mqtt_handler = common dso_local global i32 0, align 4
@mg_mqtt_proto_data_destructor = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mg_set_protocol_mqtt(%struct.mg_connection* %0) #0 {
  %2 = alloca %struct.mg_connection*, align 8
  store %struct.mg_connection* %0, %struct.mg_connection** %2, align 8
  %3 = load i32, i32* @mqtt_handler, align 4
  %4 = load %struct.mg_connection*, %struct.mg_connection** %2, align 8
  %5 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %4, i32 0, i32 2
  store i32 %3, i32* %5, align 4
  %6 = call i32 @MG_CALLOC(i32 1, i32 4)
  %7 = load %struct.mg_connection*, %struct.mg_connection** %2, align 8
  %8 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %7, i32 0, i32 1
  store i32 %6, i32* %8, align 4
  %9 = load i32, i32* @mg_mqtt_proto_data_destructor, align 4
  %10 = load %struct.mg_connection*, %struct.mg_connection** %2, align 8
  %11 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  ret void
}

declare dso_local i32 @MG_CALLOC(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
